# AdventOfCode

./: README.md  go.mod
2018/: scratchPad.md
2018/01/: main.go
2018/02/: .main.go.swp
2018/Day01/02/: main.go
2018/Day02/01/: main.go
2018/Day03/01/: main.go  out.txt  real.txt  test.txt
2018/Day03/02/: main.go  thoughts.txt
2018/Day04/01/: main.go  main.go.min  test.txt
2021/: templateMain.go
2021/Day01/01/: go.mod  main.go  problem.md
2021/Day01/02/: go.mod  main.go  problem.md
2021/Day02/1/: main.go  problem.md
2021/Day02/2/: main.go  problem.md
2021/Day03/: input.txt.test
2021/Day03/1/: main.go  problem.md
2021/Day03/2/: main.go  problem.md
2022/Fortran08/: day_one_part_one.f08  day_one_part_two.f08
2022/Rust/: clean_all.sh  new_day.sh  run_all.sh
2022/Rust/.template/src/: main.rs
2022/Rust/.template/src/args/: mod.rs
2022/Rust/.template/src/part_one/: mod.rs
2022/Rust/.template/src/part_two/: mod.rs
2022/Rust/Day01/src/: main.rs
2022/Rust/Day01/src/args/: mod.rs
2022/Rust/Day01/src/part_one/: mod.rs
2022/Rust/Day01/src/part_two/: mod.rs
2022/Rust/Day02/: Cargo.toml
2022/Rust/Day02/src/args/: mod.rs
2022/Rust/Day02/src/part_one/: mod.rs
2022/Rust/Day02/src/part_two/: mod.rs
2022/Rust/Day03/src/args/: mod.rs
2022/Rust/Day04/: Cargo.toml
2022/Rust/Day04/src/args/: mod.rs
2022/Rust/Day04/src/part_one/: mod.rs
2022/Rust/Day04/src/part_two/: mod.rs
2022/Rust/Day05/src/: main.rs
2022/Rust/Day05/src/args/: mod.rs
2022/Rust/Day06/: Cargo.toml
2022/Rust/Day07/: Cargo.toml
2022/Rust/Day07/src/: main.rs
(+11 files in other folders)
