[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-colorizer = "1"
clap = { version = "3.1.6", features = ["derive"] }
sscanf = "0.4.0"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2
